<fix>调整MIN_EPSILON的值，确保高模能够正确显示

--- a/VulkanComputeShaderApplication/VulkanComputeShaderApplication.vcxproj
+++ b/VulkanComputeShaderApplication/VulkanComputeShaderApplication.vcxproj
@@ -553,6 +553,7 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="config.hpp" />
     <ClInclude Include="lib\stb_image.h" />
     <ClInclude Include="lib\tiny_obj_loader.h" />
   </ItemGroup>
