--- a/VulkanComputeShaderApplication/VulkanComputeShaderApplication.vcxproj.filters
+++ b/VulkanComputeShaderApplication/VulkanComputeShaderApplication.vcxproj.filters
@@ -40,5 +40,8 @@
     <ClInclude Include="lib\tiny_obj_loader.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="config.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
