<sytle>将多个模型配置文件抽象为一个文件，将几何相关的类抽出为一个单独的头文件

--- a/VulkanComputeShaderApplication/VulkanComputeShaderApplication.vcxproj
+++ b/VulkanComputeShaderApplication/VulkanComputeShaderApplication.vcxproj
@@ -514,6 +514,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="geometry.hpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="shaders\shader.frag">
