--- a/VulkanComputeShaderApplication/VulkanComputeShaderApplication.vcxproj.filters
+++ b/VulkanComputeShaderApplication/VulkanComputeShaderApplication.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="geometry.hpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="shaders\shader.frag">
